syntax = "proto3";
package v1;

import "google/protobuf/empty.proto";


message Status {
    enum Response {
        OK = 0;
        Error = 1;
    }
    Response code = 1;   
}

message SearchKey {
    bytes key = 1;
}

message Payload {
    bytes key = 1;
    bytes value = 2;
}

service Cache {
    rpc Get(SearchKey) returns (Payload){};
    rpc GetMany(stream SearchKey) returns (stream Payload){};
    rpc GetAll(google.protobuf.Empty) returns (stream Payload){};
    rpc Put(stream Payload) returns (Status){};
    rpc Delete(stream SearchKey) returns (Status){};
}

